Initial commit for supporting development of HTML to PDFs using the "xhtml2pdf" library.

--- a/.gitignore
+++ b/.gitignore
@@ -151,5 +151,5 @@ env
 #—————————————————————————————
 # Application Specific Ignores
 #—————————————————————————————
-staticfiles
-/static/
+sample
+*.pdf
